--- a/hello-bff/public/index.html
+++ b/hello-bff/public/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Hello Backend</title>
+    <title>Hello BFF</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="hello.js"></script>
 </head>
