--- a/hello-frontend/public/index.html
+++ b/hello-frontend/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <script src="%PUBLIC_URL%/env-config.js"></script>
+    <script src="%PUBLIC_URL%/env.js"></script>
     <title>Hello Frontend</title>
   </head>
   <body>
